feat: mobile ready

--- a/backend/static/css/app.css
+++ b/backend/static/css/app.css
@@ -694,6 +694,11 @@ body {
   background-color: transparent;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .p-24 {
   padding: 6rem;
 }
