--- a/backend/templates/inbox_content.html
+++ b/backend/templates/inbox_content.html
@@ -1,6 +1,6 @@
 {% for message in messages %}
-<div class="w-1/3 p-4 md:w-auto flex ">
-    <h2>{{ message.number_affected_ppl }} Personen am {{ message.address }}</h2>
-    <p>{{ message.problem}}</p>
-    <p>Am {{message.timestamp</p>
+<div class="w-full md:w-1/3 border p-4 flex flex-col md:flex-row gap-4">
+  <h2>{{ message.number_affected_ppl }} Personen am {{ message.address }}</h2>
+  <p>{{ message.problem}}</p>
+  <p>Am {{message.timestamp}}</p>
 </div>
