fix: Fix sending messages

--- a/backend/templates/emergency.html
+++ b/backend/templates/emergency.html
@@ -6,16 +6,16 @@
         <h1 class="text-xl">Kiezbox Notruf</h1>
         <p>Fülle die Form aus um einen Notruf abzusetzen</p>
         <!-- Still unsure how to implement confirmation, some options listed here https://devsheet.com/htmx-send-post-request-form-submit/ -->
-        <form class="w-full flex flex-col items-center gap-1.5" hx-post="/api/messages/" hx-swap="outerHTML" hx-trigger="submit">
+        <form class="w-full flex flex-col items-center gap-1.5" hx-post="/messages" hx-swap="outerHTML" hx-trigger="submit">
             <div class="grid w-full max-w-sm items-center gap-1.5 mt-6">
                 <label
                     class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-                    for="callerName">
+                    for="name">
                     <strong>Name</strong>
                 </label>
                 <input type="text"
                     class="flex h-10 w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-                    id="callerName" placeholder="Wer bist du?" />
+                    name="name" placeholder="Wer bist du?" />
             </div>
             <div class="grid w-full max-w-sm items-center gap-1.5 mt-6">
                 <label
@@ -25,7 +25,7 @@
                 </label>
                 <input type="text"
                     class="flex h-10 w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-                    id="address" placeholder="Wo befindest du dich gerade?" />
+                    name="address" placeholder="Wo befindest du dich gerade?" />
             </div>
             <div class="grid w-full max-w-sm items-center gap-1.5 mt-6">
                 <label
@@ -35,7 +35,7 @@
                 </label>
                 <input type="text"
                     class="flex h-10 w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-                    id="problem" placeholder="Beschreibe die Art des Notfalls" />
+                    name="problem" placeholder="Beschreibe die Art des Notfalls" />
             </div>
             <div class="grid w-full max-w-sm items-center gap-1.5 mt-6">
                 <label
@@ -46,7 +46,7 @@
                 <input
                     type="number"
                     class="flex h-10 w-full rounded-md border border-input bg-transparent px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-                    id="number_affected_ppl" placeholder="" />
+                    name="number_affected_ppl" placeholder="" />
             </div>
             <button
                 class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background bg-primary text-primary-foreground hover:bg-primary/90 h-10 py-2 px-4 mt-4 w-full max-w-sm"
