--- a/backend/static/css/app.css
+++ b/backend/static/css/app.css
@@ -682,6 +682,10 @@ body {
   border-width: 1px;
 }
 
+.border-2 {
+  border-width: 4px;
+}
+
 .border-input {
   border-color: hsl(var(--input));
 }
@@ -733,6 +737,11 @@ body {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-md {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-xl {
