--- a/backend/templates/inbox_content.html
+++ b/backend/templates/inbox_content.html
@@ -1,7 +1,14 @@
 {% for message in messages %}
-<div class="w-full md:w-1/3 border p-4 flex flex-col md:flex-row gap-4">
-  <h2>{{ message.number_affected_ppl }} Personen am {{ message.address }}</h2>
-  <p>Problem {{ message.problem }}</p>
-  <p>Am {{ message.timestamp }}</p>
+<div
+  class="min-w-full md:w-1/3 border-2 p-4 flex flex-col md:flex-row gap-4 mb-8"
+>
+  <h2 class="text-md">
+    <strong>
+      Nachricht von {{ message.name }} am {{ message.timestamp }}
+    </strong>
+  </h2>
+  <p>Adresse: {{ message.address }}</p>
+  <p>Betroffene Personen: {{ message.number_affected_ppl }}</p>
+  <p>Vorfall: {{ message.problem }}</p>
 </div>
 {% endfor %}
